Update AlgorithmComplexityTest.java